--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
